@@ -1,5 +1,12 @@
 2004-02-02  Julien MOUTTE  <julien@moutte.net>
 
+	* gst-libs/gst/play/play.c: (gst_play_pipeline_setup),
+	(gst_play_set_audio_sink): Moving volume in the audio thread for 
+	instantaneous volume change. Maybe i will add another volume in front
+	of visualization later, not sure yet though.
+
+2004-02-02  Julien MOUTTE  <julien@moutte.net>
+
 	* sys/ximage/ximagesink.c: (gst_ximagesink_renegotiate_size),
 	(gst_ximagesink_handle_xevents): Better X events handling, only take
 	the latest events for configure and motion.
